--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -661,17 +661,17 @@ Participants finish 4 session of experiment, and each include one experiment as 
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex5-dprime-rt-1.pdf}
-\caption{\label{fig:ex5-dprime-rt}RT and \emph{d} prime of Experiment 4b.}
+\caption{\label{fig:ex5-dprime-rt}RT and \emph{d} prime of Experiment 5.}
 \end{figure}
 
-Figure \ref{fig:ex4b-dprime-rt} shows \emph{d} prime and reaction times of experiment 5.
+Figure \ref{fig:ex5-dprime-rt} shows \emph{d} prime and reaction times of experiment 5.
 
 \hypertarget{d-prime-5}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
 
 We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (\(F(2.95, 108.97) = 1.18\), \(\mathit{MSE} = 0.76\), \(p = .321\), \(\hat{\eta}^2_G = .006\)), but revealed effect of valence, \(F(1.85, 68.49) = 29.70\), \(\mathit{MSE} = 0.29\), \(p < .001\), \(\hat{\eta}^2_G = .034\), and their interactions, \(F(4.68, 173.09) = 5.85\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .019\).
 
-To understand the interaction, we separated four different tasks. For the morality task, the valence effect \(F(1.96, 72.66) = 2.22\), \(\mathit{MSE} = 0.21\), \(p = .116\), \(\hat{\eta}^2_G = .008\).
+We then conducted ANOVA separately for four different tasks. For the morality task, the valence effect \(F(1.96, 72.66) = 2.22\), \(\mathit{MSE} = 0.21\), \(p = .116\), \(\hat{\eta}^2_G = .008\).
 
 For emotion conditions, we found that main effect of valence \(F(1.69, 62.65) = 5.28\), \(\mathit{MSE} = 0.30\), \(p = .011\), \(\hat{\eta}^2_G = .030\). Post-hoc comparison showed that good (2.13, s.e. = 0.161) was not different from neutral condition (2.10, se = 0.125), \emph{t}(37) = 0.163, \emph{p} = 0.9854, but both are higher than than bad condition (1.79, se = 0.148) (neutral \textgreater{} bad, \emph{t}(37) = 3.588, \emph{p} = 0.0027; good \textgreater{} bad, \emph{t}(37) = 2.62, \emph{p} = 0.0332).
 
@@ -727,7 +727,13 @@ All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-prim
 \hypertarget{results-9}{%
 \subsection{Results}\label{results-9}}
 
-Only the behavioral results were reported here.
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex6a-dprime-rt-1.pdf}
+\caption{\label{fig:ex6a-dprime-rt}RT and \emph{d} prime of Experiment 6a.}
+\end{figure}
+
+Only the behavioral results were reported here. Figure \ref{fig:ex6a-dprime-rt} shows \emph{d} prime and reaction times of experiment 6a.
 
 \hypertarget{d-prime-6}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-6}}
@@ -776,10 +782,18 @@ Given that learning 6 association is more difficult than 3 association and parti
 \hypertarget{results-10}{%
 \subsection{Results}\label{results-10}}
 
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex6b-d1-dprime-rt-1.pdf}
+\caption{\label{fig:ex6b-d1-dprime-rt}RT and \emph{d} prime of Experiment 6a.}
+\end{figure}
+
 Only the behavioral results were reported here.
 
 \hypertarget{day-one}{%
 \subsubsection{Day one}\label{day-one}}
+
+Figure \ref{fig:ex6b-d1-dprime-rt} shows \emph{d} prime and reaction times from day 1 of the experiment 6b.
 
 \hypertarget{d-prime-7}{%
 \paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-7}}
@@ -791,8 +805,16 @@ There was evidence for the interaction between identity and valence, \(F(2, 42) 
 
 For the matched trials, there was interaction between identity and valence, \(F(1.72, 36.16) = 4.55\), \(\mathit{MSE} = 1,560.90\), \(p = .022\), \(\hat{\eta}^2_G = .015\). We split the self-relevant and other relevant trials separately. For the self condition, the valence effect is significant, \(F(1.92, 40.38) = 14.48\), \(\mathit{MSE} = 1,647.20\), \(p < .001\), \(\hat{\eta}^2_G = .112\). The Self-good (484, SE = 13.2) is faster than self-neutral (543, SE = 16.7) , \emph{t} = -4.521, \emph{p} = 0.0005, \emph{df} = 21 and self-bad condition (535, SE = 18.4), \emph{t} = -4.489, \emph{p} = 0.0006, \emph{df} = 21. but not significant different between neutral and bad condition, \emph{t} = 0.689, \emph{p} = 0.772, \emph{df} = 21. For other condition, there was no effect of valence, \(F(1.79, 37.5) = 1.04\), \(\mathit{MSE} = 1,842.07\), \(p = .356\), \(\hat{\eta}^2_G = .008\).
 
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex6b-d2-dprime-rt-1.pdf}
+\caption{\label{fig:ex6b-d2-dprime-rt}RT and \emph{d} prime of Experiment 6b.}
+\end{figure}
+
 \hypertarget{day-two}{%
 \subsubsection{Day two}\label{day-two}}
+
+Figure \ref{fig:ex6b-d2-dprime-rt} shows \emph{d} prime and reaction times from day 2 of the experiment 6b.
 
 \hypertarget{d-prime-8}{%
 \paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-8}}
