--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -82,6 +82,9 @@ knitr::opts_chunk$set(message = FALSE)
 # Seed for random number generation
 set.seed(42)
 knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
+
+CommonColnames <- c("ExpID", "Site", "Subject", "Age", "Handedness", "Sex", "BlockNo", "TrialNo", 
+                    'Domain',"Matchness", "Identity", "Valence", "CRESP", "RESP", "ACC", "RT")
 ```
 
 # General Methods
@@ -122,8 +125,7 @@ To assess the individual difference, we explored correlation between self-report
 # data collected in Tsinghua U
 df1a_1 <- read.csv(".\\exp1a\\rawdata_behav_exp1a_2014.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-        dplyr::mutate(Site = "THU") %>%
-        dplyr::mutate(Subject = Subject + 1000)
+        dplyr::mutate(Site = "THU", Subject = Subject + 1000)
 
 # data collected in Wenzhou U
 df1a_2 <- read.csv(".\\exp1a\\rawdata_behav_exp1a_2017.csv",header = TRUE,
@@ -142,9 +144,14 @@ df1a   <- rbind(df1a_1,df1a_2) %>%
                       Valence = Shape) %>%
         dplyr::mutate(Valence = ifelse(Valence == "Normal", "Neutral", Valence),   # recode values
                       Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
-                      Age = ifelse(Age == 0, NA, Age),
-                      Subject = factor(Subject),
-                      Site = factor(Site))  # if the min age is 0, that age is missing
+                      Age = ifelse(Age == 0, NA, Age), # if the min age is 0, that age is missing
+                      #Subject = factor(Subject),
+                      Identity = NA,
+                      ExpID = 'Exp1a',
+                      Site = factor(Site),
+                      Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
+        dplyr::select(CommonColnames) %>%
+        dplyr::arrange(Subject)
 
 rm(df1a_1,df1a_2)
 
@@ -327,8 +334,7 @@ In this study, we aimed at excluding the potential confouding factor of the fami
 # data collected in Tsinghua U
 df1b_1 <- read.csv(".\\exp1b\\rawdata_behav_exp1b_2014.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-        dplyr::mutate(Site = "THU") %>%
-        dplyr::mutate(Subject = Subject + 1100)
+        dplyr::mutate(Site = "THU", Subject = Subject + 1100)
 
 # data collected in Wenzhou U
 df1b_2 <- read.csv(".\\exp1b\\rawdata_behav_exp1b_201705.csv",header = TRUE,
@@ -348,8 +354,13 @@ df1b   <- rbind(df1b_1,df1b_2) %>%
         dplyr::mutate(Valence = ifelse(Valence == "Normal", "Neutral", Valence),   # recode values
                       Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                       Age = ifelse(Age == 0, NA, Age),
-                      Subject = factor(Subject),
-                      Site = factor(Site))  # if the min age is 0, that age is missing
+                      #Subject = factor(Subject),
+                      ExpID = 'Exp_1b',
+                      Identity = NA,
+                      Domain = "Morality",
+                      Site = factor(Site)) %>% # if the min age is 0, that age is missing
+        dplyr::select(CommonColnames)%>%
+        dplyr::arrange(Subject)
 
 rm(df1b_1,df1b_2)
 
@@ -509,21 +520,27 @@ In this study, we further control the valence of words using in our experiment. 
 # data collected in Tsinghua U
 df1c <- read.csv(".\\exp1c\\rawdata_behav_exp1c_2014.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-  dplyr::select(ï..Subject,Age,Sex,TrialList1.Sample,BlockList.Sample,
+  dplyr::select(ï..Subject,Age, Handedness,Sex,TrialList1.Sample,BlockList.Sample,
                  Shape,YesNoResp,CorrectAnswer,                         # select necessary columns
                  Target1.ACC,Target1.RESP, Target1.RT) %>%
   dplyr::rename(Subject = ï..Subject, 
                 BlockNo = BlockList.Sample,
                 TrialNo = TrialList1.Sample,
                 ACC = Target1.ACC,                         # rename columns
+                CRESP = CorrectAnswer,
                 RT = Target1.RT, RESP =Target1.RESP,
                 Matchness = YesNoResp, Valence = Shape) %>%
   dplyr::mutate(Valence = ifelse(Valence == "Normal", "Neutral", Valence),    # change value
                 Valence = factor(Valence, levels=c("Good", "Neutral","Bad")),
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Matchness = factor(Matchness, levels=c("Match", "Mismatch"))) %>%
-  dplyr::mutate(Site = "THU") %>%
-  dplyr::mutate(Subject = Subject + 1200)     # change subject ID to 12XX
+  dplyr::mutate(Site = "THU",
+                Identity = NA,
+                ExpID = "Exp1c",
+                Domain = "Morality",
+                Subject = Subject + 1200) %>%    # change subject ID to 12XX
+  dplyr::select(CommonColnames) %>%
+  dplyr::arrange(Subject)
 #length(unique(df1c$Subject))
 
 # distinguish between practice and formal data
@@ -664,7 +681,6 @@ Experiment 2 was conducted for two purpose: (1) to further confirm the facilitat
 # data collected in Tsinghua U
 df2 <- read.csv(".\\exp2\\rawdata_behav_exp2.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-  dplyr::mutate(Site = "THU") %>%
   dplyr::rename(ACC = Target.ACC,           # rename columns
                 RT  = Target.RT,
                 CRESP = Target.CRESP,
@@ -675,9 +691,13 @@ df2 <- read.csv(".\\exp2\\rawdata_behav_exp2.csv", header = TRUE,
                 Valence = Shape) %>%
   dplyr::mutate(Valence = ifelse(Valence == "Normal", "Neutral", Valence),       # recode values
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
-                Age = ifelse(Age == 0, NA, Age)) %>%                             # if the min age is 0, that age is missing
-                #Subject = factor(Subject)) %>%
-  dplyr::mutate(Subject = ifelse(Subject < 40, Subject + 1000, Subject + 2000))  # recode subject ID, identify those particiant from exp1a
+                Age = ifelse(Age == 0, NA, Age),
+                Site = "THU",
+                ExpID = 'exp2',
+                Identity = NA,
+                Domain = "Morality",
+                Subject = ifelse(Subject < 40, Subject + 1000, Subject + 2000)) %>%  # recode subject ID, identify those particiant from exp1a
+  dplyr::select(CommonColnames)
 
 df2.T.basic     <- df2 %>%
   dplyr::select(Site, Subject, Age, Sex) %>%
@@ -838,7 +858,7 @@ To examine the modulation effect of positive valence was an intrinsic, self-refe
 # data collected in Tsinghua U
 df3a <- read.csv(".\\exp3a\\rawdata_behav_exp3a_2014.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-  dplyr::mutate(Site = "THU") %>%
+  dplyr::mutate() %>%
   dplyr::rename(ACC = Target.ACC,           # rename columns
                 RT  = Target.RT,
                 CRESP = Target.CRESP,
@@ -857,9 +877,12 @@ df3a <- read.csv(".\\exp3a\\rawdata_behav_exp3a_2014.csv", header = TRUE,
                                         "Other" = (Shape == "Normalother" | Shape == 'Goodother' | Shape == 'Badother'), 
                                         .method ="first", .default = NA),
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
-                Age = ifelse(Age == 0, NA, Age)) %>%                             # if the min age is 0, that age is missing
-                #Subject = factor(Subject)) %>%
-  dplyr::mutate(Subject = Subject + 3100)                                        # re-code the subject id
+                Age = ifelse(Age == 0, NA, Age),
+                Site = "THU",
+                ExpID = "Exp3a",
+                Domain = "Morality",
+                Subject = Subject + 3100) %>%                                        # re-code the subject id
+  dplyr::select(CommonColnames)
 
 df3a.T.basic     <- df3a %>%
   dplyr::select(Site, Subject, Age, Sex) %>%
@@ -1049,8 +1072,9 @@ In study 3a, participants had to remember 6 pairs of association, which cause hi
 # data collected in Tsinghua U
 df3b <- read.csv(".\\exp3b\\rawdata_behav_exp3b_2017.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-  dplyr::mutate(Site = "WZU") %>%
-  dplyr::rename(ACC = Target.ACC,           # rename columns
+  dplyr::mutate() %>%
+  dplyr::rename(Subject = ï..Subject,
+                ACC = Target.ACC,           # rename columns
                 RT  = Target.RT,
                 CRESP = CorrectAnswer,
                 #BlockNo = BlockList.Sample,
@@ -1067,8 +1091,12 @@ df3b <- read.csv(".\\exp3b\\rawdata_behav_exp3b_2017.csv", header = TRUE,
                 Identity  = ifelse(Identity == "Self" | Identity == 'self', "Self", "Other"),
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Age = ifelse(Age == 0, NA, Age),  # if the min age is 0, that age is missing
-                BlockNo = coalesce (otherBlocklList.Sample, selfBlockList.Sample),
-                Subject = factor(Subject))
+                BlockNo = dplyr::coalesce(otherBlocklList.Sample, selfBlockList.Sample),
+                TrialNo = dplyr::coalesce(OtherTrialist.Sample, selfTrialList.Sample, otherProcTrialList.Sample, selfPracTrialList.Sample),
+                Site = "WZU", ExpID = "Exp3b", Domain = "Morality") %>%
+  dplyr::select(CommonColnames)
+                
+#                Subject = factor(Subject))
 
 df3b.T.basic     <- df3b %>%
   dplyr::select(Site, Subject, Age, Sex) %>%
@@ -1302,7 +1330,10 @@ df4a <- rbind(df4a_1,df4a_2) %>%
                 Identity = ifelse(Identity == "self" | Identity == "Self", "Self", "Other"),
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Age = ifelse(Age == 0, NA, Age),                             # if the min age is 0, that age is missing
-                Subject = factor(Subject))
+                ExpID = 'Exp4a', Domain = "Morality") %>%
+  dplyr::select(CommonColnames)
+                #Subject = factor(Subject))
+
 rm(df4a_1,df4a_2) # remove the temporary variables.
 
 df4a.T.basic     <- df4a %>%
@@ -1517,7 +1548,9 @@ df4b <- rbind(df4b_1,df4b_2) %>%
                 Identity = ifelse(Identity == "self" | Identity == "Self", "Self", "Other"),
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Age = ifelse(Age == 0, NA, Age),                             # if the min age is 0, that age is missing
-                Subject = factor(Subject))
+                ExpID = 'Exp4b', Domain = "Morality") %>%
+  dplyr::select(CommonColnames)
+
 rm(df4b_1,df4b_2) # remove the temporary variables.
 
 df4b.T.basic     <- df4b %>%
@@ -1719,7 +1752,8 @@ So far, we have considered the modulation effect of morality and found that the 
 ```{r loadingData_5,echo=FALSE,results='hide'}
 df5 <- read.csv(".\\exp5_specificity\\rawdata_behav_5_specificity_2016.csv",header = TRUE, sep = ",",
                 stringsAsFactors=FALSE, na.strings=c("","NA")) %>%
-  dplyr::rename(BlockListM.Sample = BlockListMoral.Sample, Matchness = YesNoResp) %>%                            # rename the columns
+  dplyr::rename(BlockListM.Sample = BlockListMoral.Sample, 
+                Matchness = YesNoResp, CRESP = CorrectAnswer) %>%                            # rename the columns
   dplyr::mutate(Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 taskType = derivedFactor("Emotion"  = (Label == "sad" | Label == "happy" | Label == "neutral"),
                                          "Morality" = (Label == "bad" | Label == "good" | Label == "ordinary"),
@@ -1730,24 +1764,39 @@ df5 <- read.csv(".\\exp5_specificity\\rawdata_behav_5_specificity_2016.csv",head
                                          "Bad" = (Label == "bad"  | Label == "sad"   | Label == "uglyP"    | Label == "uglyS"),
                                          "Neutral" = (Label == "ordinary" | Label == "neutral" | Label == "normalP" | Label == "normalS"),
                                          .method ="first", .default = NA)) %>%
-  tidyr::replace_na(list(PracListE="",    PracListM="",    PracListP="",    PracListS="",          # replace NA with "" for later unite
-                         BlockListE.Sample="", BlockListM.Sample="", BlockListP.Sample="", BlockListS.Sample="",
-                         TrialListE.Sample="", TrialListM.Sample="", TrialListP.Sample="", TrialListS.Sample="",
-                         TargetE.ACC="",  TargetM.ACC="",  TargetP.ACC="",  TargetS.ACC="",
-                         TargetE.RESP="", TargetM.RESP="", TargetP.RESP="", TargetS.RESP="",
-                         TargetE.RT="",   TargetM.RT="",   TargetP.RT="",   TargetS.RT="")) %>%
+  tidyr::replace_na(list(PracListE="",    PracListM="",    PracListP="",    PracListS="")) %>%          # replace NA with "" for later unite
+                         #BlockListE.Sample="", BlockListM.Sample="", BlockListP.Sample="", BlockListS.Sample="",
+                         #TrialListE.Sample="", TrialListM.Sample="", TrialListP.Sample="", TrialListS.Sample="",
+                         #TargetE.ACC="",  TargetM.ACC="",  TargetP.ACC="",  TargetS.ACC="",
+                         #TargetE.RESP="", TargetM.RESP="", TargetP.RESP="", TargetS.RESP="",
+                         #TargetE.RT="",   TargetM.RT="",   TargetP.RT="",   TargetS.RT="")) %>%
   tidyr::unite("PracList", PracListE,PracListM,PracListP,PracListS, sep = "")  %>%                # unite all praclist
-  tidyr::unite("BlockNo", BlockListE.Sample,BlockListM.Sample,BlockListP.Sample,BlockListS.Sample, sep = "") %>% # unite all blocklist
-  tidyr::unite("TrialNo", TrialListE.Sample,TrialListM.Sample,TrialListP.Sample,TrialListS.Sample, sep = "") %>% # unite all blocklist
-  tidyr::unite("ACC", TargetE.ACC,  TargetM.ACC,  TargetP.ACC,  TargetS.ACC, sep = "") %>%        # unite all ACC
-  tidyr::unite("RESP", TargetE.RESP,  TargetM.RESP,  TargetP.RESP,  TargetS.RESP, sep = "") %>%   # unite all RESP
-  tidyr::unite("RT", TargetE.RT,  TargetM.RT,  TargetP.RT,  TargetS.RT, sep = "") %>%             # unite all RT
+  #tidyr::unite("BlockNo", BlockListE.Sample,BlockListM.Sample,BlockListP.Sample,BlockListS.Sample, sep = "") %>% # unite all blocklist
+  #tidyr::unite("TrialNo", TrialListE.Sample,TrialListM.Sample,TrialListP.Sample,TrialListS.Sample, sep = "") %>% # unite all blocklist
+ # tidyr::unite("ACC", TargetE.ACC,  TargetM.ACC,  TargetP.ACC,  TargetS.ACC, sep = "") %>%        # unite all ACC
+  #tidyr::unite("RESP", TargetE.RESP,  TargetM.RESP,  TargetP.RESP,  TargetS.RESP, sep = "") %>%   # unite all RESP
+  #tidyr::unite("RT", TargetE.RT,  TargetM.RT,  TargetP.RT,  TargetS.RT, sep = "") %>%             # unite all RT
   dplyr::mutate(Site = "THU", 
-                ACC = as.numeric(ACC), 
-                RT = as.numeric(RT),
-                BlockNo = as.numeric(BlockNo),
-                TrialNo = as.numeric(TrialNo)) %>% 
-  dplyr::mutate_if(is_character, list(~na_if(.,"")))     # blank to NA
+                ExpID = "Exp5",
+                RESP = dplyr::coalesce(TargetE.RESP,  TargetM.RESP,  TargetP.RESP,  TargetS.RESP),
+                ACC = dplyr::coalesce(TargetE.ACC,  TargetM.ACC,  TargetP.ACC,  TargetS.ACC), 
+                RT = dplyr::coalesce(TargetE.RT,  TargetM.RT,  TargetP.RT,  TargetS.RT),
+                BlockNo = dplyr::coalesce(BlockListE.Sample,BlockListM.Sample,BlockListP.Sample,BlockListS.Sample),
+                TrialNo = dplyr::coalesce(TrialListE.Sample,TrialListM.Sample,TrialListP.Sample,TrialListS.Sample)) %>% 
+                #BlockNo = as.numeric(BlockNo),
+                #TrialNo = as.numeric(TrialNo)) %>% 
+  dplyr::mutate_if(is_character, list(~na_if(.,""))) %>%    # blank to NA
+  dplyr::select(-c(TargetE.RESP,  TargetM.RESP, TargetP.RESP,  TargetS.RESP,
+                  TargetE.ACC,  TargetM.ACC,  TargetP.ACC,  TargetS.ACC,
+                  TargetE.RT,  TargetM.RT,  TargetP.RT,  TargetS.RT,
+                  BlockListE.Sample,BlockListM.Sample,BlockListP.Sample,BlockListS.Sample,
+                  TrialListE.Sample,TrialListM.Sample,TrialListP.Sample,TrialListS.Sample))
+
+df5_meta <- df5 %>%
+  dplyr::rename(Domain = taskType) %>%
+  dplyr::mutate(Identity = NA) %>%
+  dplyr::select(CommonColnames)
+  
 
 df5.T.basic     <- df5 %>%
   dplyr::select(Site, Subject, Age, Sex) %>%
@@ -2025,9 +2074,13 @@ df6a <- read.csv(".\\exp6a_erp1\\rawdata_erp_exp6a_2014.csv",header = TRUE, sep 
   dplyr::mutate(Valence = ifelse(Valence == "Normal", "Neutral", Valence),                   # re-code the data
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Age = ifelse(Age == 0, NA, Age)) %>%
-  dplyr::mutate(Site = "THU") %>%
-  dplyr::mutate(Subject = Subject + 6100) 
+  dplyr::mutate(Site = "THU",
+                ExpID = "Exp6a",        # add experiment id
+                Domain = "Morality",    # add domain as morality (to be comparable with experiment 5)
+                Identity = NA,
+                Subject = Subject + 6100) 
 
+df6a_meta <- df6a %>% dplyr::select(CommonColnames)
 # show the number of trials for each condition
 # df6a_trials <- df6a %>%
 #   dplyr::group_by(Subject, Matchness, Valence) %>%
@@ -2217,6 +2270,11 @@ df6b_d1 <- read.csv(".\\exp6b_erp2\\rawdata_erp_exp6b_d1_2016.csv",header = TRUE
                 Matchness = ifelse(Matchness == "Yes", "Match", "Mismatch"),
                 Age = ifelse(Age == 0, NA, Age)) %>%
   dplyr::mutate(Site = "THU")
+
+df6b_meta <- df6b_d1 %>%
+  dplyr::mutate(ExpID = "Exp6b",
+                Domain = "Morality") %>%
+  dplyr::select(CommonColnames)
 
 df6b_d2 <- read.csv(".\\exp6b_erp2\\rawdata_erp_exp6b_d2_2016.csv",header = TRUE, sep = ",",
                  stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
@@ -2615,11 +2673,20 @@ To get a better estimation of the effect in the current study, we combined the d
 ### Software
 Mini Meta-analysis was carried out in R 3.6. As for the meta-analysis of the effect size of d’ and RTs, we used “metafor” package (Viechtbauer, 2010). 
 
-### Data analysis strategy
+### Data analysis
 
-Before analyzing, we first calculated the effect size based on for each participant. Then, we used the '' function of the metafor to estimate the overall effect size.
+```{r combine Data,echo=FALSE,results='hide'}
+df.meta <- rbind(df1a,df1b,df1c,df2,df3a,df4a,df5_meta,df6a_meta,df6b_meta) # combine data, need to exclude those overlapping participants.
 
-Specifically, we are interested in the effect size of the following effects. First, the effects of moral valence, regardless of identity. To this end, we estimated the different between good vs. bad, good vs. neutral, and neutral vs. bad, for both *d* prime and RTs. Second, the interaction between moral valence and identity. To this end, we estimated the effect for both self and other conditions. Additionally, we also examined the main effect of identity, regardless of valence. To this end we estimated the differences between self vs. other conditions, across all valence conditions.
+```
+
+To avoid stituation that some participant participated more than one experiment, we inspected the all the available participant information and markered those participants and only include their results from the first participation. Also, 24 participants were intentionally recruited to participate both exp 1a and exp 2, only results from exp 1a were included in the current meta-analysis.
+
+Before analyzing, we first calculated the effect size based on the primary data of each experiment. Then, we used the '' function of the metafor to estimate the overall effect size.
+
+To test different effect, conducted following analysis. First, we tested the effects of moral valence, regardless of self-relevance. To this end, we estimated the different between good vs. bad (13 experiments), good vs. neutral (11 experiments), and neutral vs. bad (11 experiments), for both *d* prime and RTs. Second, we examined the interaction between moral valence and identity. That is, we estimated the effect of valence for both self- and other- relevance conditions. Additionally, we examined the main effect of self-relevance, regardless of valence. To this end we estimated the differences between self vs. other conditions, regardless of the valence ().
+
+
 
 ## Results
 
